# BatComputer

./: .gitignore  README.md  pyproject.toml
batcomputer/: app.py  batcomputer.tcss
batcomputer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
batcomputer/pages/: archive.py  dashboard.py  docker.py  homepage.py  monitor.py  network.py  settings.py
batcomputer/services/: docker.py  docker_logs.py  docker_state.py  process_state.py  processes.py
batcomputer/widgets/: docker_actions.py  docker_container_list.py  docker_cpu.py  docker_cpu_graph.py  docker_health.py  docker_io.py  docker_logs.py  docker_network.py  docker_ports.py  docker_processes.py  docker_system.py  graph.py  kill_popup.py  log_popup.py  network_connections.py  network_interfaces.py  network_stats.py  process_details.py  search_popup.py  service_card.py  services.py  stats.py  system_info.py  task_list.py  telemetry_graph.py
