[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "batcomputer"
version = "0.1.0"

dependencies = [
    "textual",
    "psutil",
    "docker",
]

[project.scripts]
batcomputer = "batcomputer.app:main"
batcom = "batcomputer.app:main"

[tool.setuptools]
packages = ["batcomputer"]

